--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>learning github</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>learning webdevlopment</p>
+    <img src="pic.jpg" alt="" srcset="">
 </body>
 </html>
