--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello world</h1>
     <p>learning webdevlopment</p>
     <p>I am from dev branch</p>
+    <p>master</p>
     <img src="pic.jpg" alt="" srcset="">
 </body>
 </html>
